--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "react-router-dom": "^5.2.0"
