--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
