--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.4",
     "redux": "^4.0.5"
   },
@@ -37,7 +38,6 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "bootstrap": "^4.5.3",
-    "bootswatch": "^4.5.3",
     "react-router-dom": "^5.2.0"
   }
 }
