--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.0.2",
     "react-router-dom": "^5.2.0"
   }
 }
