--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
