--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
