--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@material-ui/core": "^4.11.0",
     "firebase": "^8.0.2",
     "node-sass": "^4.14.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
