--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "firebase": "^8.0.2",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2"
